--- a/ec2_creation.yaml
+++ b/ec2_creation.yaml
@@ -6,7 +6,7 @@
     ami_id: ami-09c813fb71547fc4f
     sg_id: sg-04dd4d0e99ce457dc # replace with your SG ID
     zone_id: "Z0379910K30ZWY5SALMW" # replace with your ID
-    domain_name: "daws86s.fun"
+    domain_name: "gopi29.fun"
     # we can pass instances through command line using -e
     # instances: 
     # - mongodb
